--- a/chat.html
+++ b/chat.html
@@ -58,6 +58,45 @@
           <!-- /////////////////// -->
         </ul>
       </div>
+      <div class="chat-main-wrapper">
+        <div class="chat-container">
+          <div class="chat">
+            <div class="chat-header">
+              <img src="./assets/robot-circle.png" alt="robot" />
+              <p class="chat-name">GIG</p>
+              <p>Your personal gift idea generator AI</p>
+            </div>
+            <div class="chat-messages">
+              <div class="message">
+                <img
+                  src="./assets/robot-circle.png"
+                  alt=""
+                  class="user-image" />
+                <p class="message-text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Doloribus a incidunt,
+                </p>
+              </div>
+              <div class="user-message">
+                <p class="user-message-text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Doloribus a incidunt, facilis similique, aspernatur quisquam
+                  sunt nostrum deserunt aut dolore
+                </p>
+                <img
+                  src="./assets/robot-circle.png"
+                  alt=""
+                  class="user-image" />
+              </div>
+            </div>
+          </div>
+          <div class="input-cont">
+            <input class="input" type="text" />
+            <div class="input-text">GIG</div>
+          </div>
+        </div>
+      </div>
     </div>
+    <script src="chat.js"></script>
   </body>
 </html>
