--- a/helllo.html
+++ b/helllo.html
@@ -17,7 +17,7 @@
       <div class="hello-content">
         <h1>MEET GIG,</h1>
         <p>Your personal gift idea generator AI</p>
-        <button>Hi, GIG!</button>
+        <button><a href="chat.html">Hi, GIG!</a></button>
       </div>
     </div>
   </body>
