--- a/chat.html
+++ b/chat.html
@@ -11,7 +11,7 @@
       rel="stylesheet" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="chat.css" />
+    <link rel="stylesheet" href="./chat.css" />
     <title>Document</title>
   </head>
   <body>
@@ -97,6 +97,6 @@
         </div>
       </div>
     </div>
-    <script src="chat.js"></script>
+    <script src="./chat.js"></script>
   </body>
 </html>
