add simple style changes

--- a/chat.html
+++ b/chat.html
@@ -103,6 +103,10 @@
                   <button>Buy It Now</button>
                 </div>
               </div>
+              <div class="load-cont">
+                <button class="load-more">Load More Ideas</button>
+                <button class="reset">Reset</button>
+              </div>
               <div class="bot-answer"></div>
             </div>
           </div>
