add responsive styles

--- a/chat.html
+++ b/chat.html
@@ -68,10 +68,7 @@
             </div>
             <div class="chat-messages">
               <div class="message">
-                <img
-                  src="./assets/robot-circle.png"
-                  alt=""
-                  class="user-image" />
+                <img src="./assets/dog-circle.png" alt="" class="user-image" />
                 <p class="message-text">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   Doloribus a incidunt,
@@ -90,17 +87,23 @@
               </div>
               <div class="gift-card">
                 <img
-                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRhEs7JN7H86tah-aIMXB64zptYDB28EOETeUnFRucDJGhyOn7we-wwJ_kHxh3Xl2Go_zo&usqp=CAU"
-                  alt="" />
-                <h3>Scratch-off World Map:</h3>
-                <p class="card-text">
-                  Henry can scratch off the places he's traveled to on this
-                  interactive world map. It's a great way for him to keep track
-                  of his adventures and plan his next trip.
-                </p>
-                <div class="btns">
-                  <p class="price">Price: <span>$28.99</span></p>
-                  <button>Buy It Now</button>
+                  src="./assets/robot-circle.png"
+                  alt=""
+                  class="user-image" />
+                <div class="gift">
+                  <img
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRhEs7JN7H86tah-aIMXB64zptYDB28EOETeUnFRucDJGhyOn7we-wwJ_kHxh3Xl2Go_zo&usqp=CAU"
+                    alt="" />
+                  <h3>Scratch-off World Map:</h3>
+                  <p class="card-text">
+                    Henry can scratch off the places he's traveled to on this
+                    interactive world map. It's a great way for him to keep
+                    track of his adventures and plan his next trip.
+                  </p>
+                  <div class="btns">
+                    <p class="price">Price: <span>$28.99</span></p>
+                    <button>Buy It Now</button>
+                  </div>
                 </div>
               </div>
               <div class="load-cont">
